@@ -229,7 +229,7 @@ $ocpt_conf['gen']['prim_curr_dec_max_thres'] = 1.00; // Can be decimals, NO SYMB
 
 // Your local time offset IN HOURS, COMPARED TO UTC TIME. Can be negative or positive.
 // (Used for user experience 'pretty' timestamping in interface logic ONLY, WILL NOT change or screw up UTC log times etc if you change this)
-$ocpt_conf['gen']['loc_time_offset'] = -4; // example: -5 or 5
+$ocpt_conf['gen']['loc_time_offset'] = -4; // example: -5 or 5, -5.5 or 5.75 (#CAN BE DECIMAL# TO SUPPORT 30 / 45 MINUTE TIME ZONES)
 
 
 // Configure which interface theme you want as the default theme (also can be manually switched later, on the settings page in the interface)
